[gd_scene load_steps=6 format=3 uid="uid://buislk6idp15x"]

[ext_resource type="Script" uid="uid://nmdduvbye7t7" path="res://Scripts/Managers/Main_Menu.gd" id="1_ib0hw"]
[ext_resource type="FontFile" uid="uid://qbfy3mwl13w0" path="res://Assets/Fonts/Asimovian/Asimovian-Regular.ttf" id="2_7vaxw"]
[ext_resource type="Texture2D" uid="uid://bbmqq2lg0mp01" path="res://temp/blue_nebulae_1.png" id="3_hyg0c"]

[sub_resource type="LabelSettings" id="LabelSettings_4gb0r"]
font = ExtResource("2_7vaxw")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_0wcfy"]
font = ExtResource("2_7vaxw")
font_size = 35

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ib0hw")

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 647.6
offset_top = 212.136
offset_right = 927.6
offset_bottom = 296.136
scale = Vector2(2.32, 2.613)

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 85.0
text = "Start Game"
label_settings = SubResource("LabelSettings_4gb0r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 647.6
offset_top = 690.136
offset_right = 927.6
offset_bottom = 774.136
scale = Vector2(2.32, 2.613)

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 85.0
text = "Quit"
label_settings = SubResource("LabelSettings_4gb0r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 647.6
offset_top = 451.136
offset_right = 927.6
offset_bottom = 535.136
scale = Vector2(2.32, 2.613)

[node name="Label" type="Label" parent="Controls"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 85.0
text = "Controlls"
label_settings = SubResource("LabelSettings_4gb0r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controlls_Info" type="PopupPanel" parent="."]
unique_name_in_owner = true
title = "Controlls"
position = Vector2i(881, 133)
size = Vector2i(500, 500)
visible = true

[node name="Display" type="Label" parent="Controlls_Info"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 496.0
text = "Shoot: Left Mouse
Aim: Right Mouse
Jump: Space
Sprint: Shfit
Interact: E
Reload: R
Emote: F
Drop Weapon: G"
label_settings = SubResource("LabelSettings_0wcfy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueNebulae1" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(837, 1069)
texture = ExtResource("3_hyg0c")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
